--- a/Python-Training/untitled data summit working notebook.ipynb
+++ b/Python-Training/untitled data summit working notebook.ipynb
@@ -2,78 +2,70 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Data management, organization, manipulation, and basic functionality"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
-    "code_folding": []
+    "code_folding": [],
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
-    "df = pd.read_stata(r\"X:\\Box\\a_dataverse_JJ\\IPA Studies\\46 - Karlan - Smoking Cessation, Philippines\\Karlan - Smoking Cessation Dataverse files\\data\\cares_deposit_final.dta\")"
+    "#df = pd.read_stata(r\"X:\\Box\\a_dataverse_JJ\\IPA Studies\\46 - Karlan - Smoking Cessation, Philippines\\Karlan - Smoking Cessation Dataverse files\\data\\cares_deposit_final.dta\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['cid', 'week', 'deposit', 'treatment', 'finalgroup', 'passedtest',\n",
-       "       'passedtest_1yr', 'caressuccess', 'dateopened_n', 'datedeposit',\n",
-       "       '_fillin', 'oneclient', 'deposit_weekavg_bytest', 'madedeposit',\n",
-       "       'madedeposit_weekavg_bytest', 'oneweektest'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "#df"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Data Cleaning"
    ]
@@ -82,7 +74,8 @@
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -93,7 +86,8 @@
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -105,7 +99,8 @@
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -115,7 +110,10 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#df = df.replace(185.0, 'x') #df.replace('.d', np.nan)"
@@ -125,12 +123,14 @@
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {
+    "collapsed": true,
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "import seaborn as sns\n",
-    "%matplotlib inline\n",
+    "#import seaborn as sns\n",
+    "#%matplotlib inline\n",
     "\n",
     "# Scatterplot\n",
     "#sns.lmplot(x='cid', y='deposit', data=df, fit_reg=False, hue='week')"
@@ -138,11 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true,
+    "hidden": true
+   },
    "outputs": [],
    "source": [
-    "sns.set(style=\"ticks\")\n",
+    "#sns.set(style=\"ticks\")\n",
     "\n",
     "# Boxplot\n",
     "#sns.boxplot(x=\"week\", y=\"deposit\", data=df, palette=\"PRGn\")\n",
@@ -151,7 +154,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Summary statistics / OLS"
    ]
@@ -160,7 +165,8 @@
    "cell_type": "code",
    "execution_count": 87,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -171,7 +177,8 @@
    "cell_type": "code",
    "execution_count": 81,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -182,7 +189,8 @@
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -193,7 +201,8 @@
    "cell_type": "code",
    "execution_count": 72,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -203,7 +212,10 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# print(result.summary())"
@@ -213,17 +225,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
-   "display_name": "Python [conda env:py35]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-py35-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -235,7 +249,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.2"
+  },
+  "nav_menu": {},
+  "toc": {
+   "navigate_menu": true,
+   "number_sections": true,
+   "sideBar": true,
+   "threshold": 6,
+   "toc_cell": false,
+   "toc_section_display": "block",
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
