--- a/Python-Training/Data Summit Jupyter Notebook.ipynb
+++ b/Python-Training/Data Summit Jupyter Notebook.ipynb
@@ -36,7 +36,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_stata(\"/Users/JJ/Dropbox/Work-Personal Sync/Misc/Data Summit/cares_deposit_final.dta\")"
+    "df = pd.read_stata(\"cares_deposit_final.dta\")"
    ]
   },
   {
